Reduced z-index to prevent badges from overlapping loading screen

--- a/triplog-client/public/styles/triplog/_timeline.scss
+++ b/triplog-client/public/styles/triplog/_timeline.scss
@@ -127,7 +127,7 @@
       left: 50%;
       margin-left: -20px;
       background-color: white;
-      z-index: 100;
+      z-index: 1;
       border: 10px solid lightgray;
       border-radius: 50%;
 
